Fix address switchmap
